Add directional tag verification
Change-Id: If18bf2d047b173233b2a8969108d45c0160835da

--- a/client/src/main/res/layout/activity_main.xml
+++ b/client/src/main/res/layout/activity_main.xml
@@ -9,10 +9,31 @@
     tools:context=".MainActivity">
 
     <Button
-        android:onClick="clickBtn"
         android:id="@+id/btnVerityCallbck"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="clickBtn"
         android:text="registerCallback" />
+
+    <Button
+        android:id="@+id/btnTransIn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="clickBtn"
+        android:text="trans in" />
+
+    <Button
+        android:id="@+id/btnTransOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="clickBtn"
+        android:text="trans out" />
+
+    <Button
+        android:id="@+id/btnTransInOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="clickBtn"
+        android:text="trans inout" />
 
 </LinearLayout>
